Add scripts and demo project

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,40 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# Xcode
+build/
+DerivedData/
+
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+
+*.xcuserstate
+xcuserdata/
+
+## Other
+*.moved-aside
+*.xccheckout
+*.xcscmblueprint
+
+profile
+*.hmap
+*.ipa
+
+# CocoaPods
+Pods/
+!Podfile.lock
+
+# Temporary files
+.DS_Store
+.Trashes
+.Spotlight-V100
+*.swp
+*.lock
+
